completed refactor, but will need cleanup

--- a/index2.html
+++ b/index2.html
@@ -31,10 +31,10 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
-		<script src="THREEx.CelShader.js"></script>
-		<script src="FileSaver.js"></script>
 		<script src="CanvasBox.js"></script>
 		<script src="Viewport.js"></script>
+		<script src="FileSaver.js"></script>
+		<script src="Export.js"></script>
 		<script src="ZLathe.js"></script>
 		
 	</body>
