Styled edit window. Got rid of magic rotation number. Re-enabled buttons for now.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			</div>
 			<div id="canvasContainer">
 				<div id="windows"></div>
-				<button class="btn btn-success" id="lathe" disabled="true"><i class="icon-refresh"></i> Lathe</button>
+				<button class="btn btn-success" id="lathe"><i class="icon-refresh"></i> Lathe</button>
 				<button class="btn btn-warning" id="undo"><i class="icon-undo"></i> Undo</button>
-				<button class="btn btn-info" id="exportstl" disabled="true"><i class="icon-download-alt"></i> Export to STL</button>
+				<button class="btn btn-info" id="exportstl"><i class="icon-download-alt"></i> Export to STL</button>
 				<button class="btn btn-danger" id="clear"><i class="icon-trash"></i> Clear</button>
 			</div>			
 			<h3>Instructions</h3>
