--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		<script src="https://rawgithub.com/mrdoob/three.js/master/build/three.js"></script>
+		<script src="three.min.js"></script>
 		<script src="CanvasBox.js"></script>
 		<script src="Viewport.js"></script>
 		<script src="FileSaver.js"></script>
