Debug statement. Case sensitive filenames

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-		<link rel="stylesheet" href="zlathe.css">		
+		<link rel="stylesheet" href="ZLathe.css">		
 	</head>
 	<body>
 		<div class="container">
