--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-		<link rel="stylesheet" href="ZLathe.css">
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="css/ZLathe.css">
+		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	</head>
 	<body>
 		<div class="container">
@@ -30,11 +30,11 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		<script src="three.min.js"></script>
-		<script src="CanvasBox.js"></script>
-		<script src="Viewport.js"></script>
-		<script src="FileSaver.js"></script>
-		<script src="Export.js"></script>
-		<script src="ZLathe.js"></script>
+		<script src="js/three.min.js"></script>
+		<script src="js/CanvasBox.js"></script>
+		<script src="js/Viewport.js"></script>
+		<script src="js/FileSaver.js"></script>
+		<script src="js/Export.js"></script>
+		<script src="js/ZLathe.js"></script>
 	</body>
 </html>
