lib dir addition

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		</div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		<script src="js/three.min.js"></script>
+		<script src="js/lib/three.min.js"></script>
 		<script src="js/CanvasBox.js"></script>
 		<script src="js/Viewport.js"></script>
-		<script src="js/FileSaver.js"></script>
+		<script src="js/lib/FileSaver.js"></script>
 		<script src="js/Export.js"></script>
 		<script src="js/ZLathe.js"></script>
 	</body>
