--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ZLathe : Everyone must turn, turn, turn.</title>
+		<title>Lathe-R-Beam< : Everyone must turn, turn, turn.</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/ZLathe.css">
+		<link rel="stylesheet" href="css/Lathe-R-Beam.css">
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	</head>
 	<body>
 		<div class="container">
 			<div class="header">
-				<h1 id="logo">ZLathe</h1>
+				<h1 id="logo">Lathe-R-Beam</h1>
 			</div>
 			<div id="canvasContainer">
 				<div id="windows"></div>
@@ -22,7 +22,7 @@
 			</div>			
 			<h3>Instructions</h3>
 			<p>Click three or more times in the left window to create a profile shape. Try to make the first and last points as close to the dotted line as possible. When you're done, click 'Lathe' and see your creation turned into a 3D shape!</p>
-			<p>You can pan and tilt the 3D shape by moving your mouse, or export to STL format for 3D printing. Running through <a href="http://cloud.netfabb.com/">netfabb</a> before attempting to print is highly recommended.</p>
+			<p>You can rotate the 3D shape by moving your mouse, or export to STL format for 3D printing. Running through <a href="http://cloud.netfabb.com/">netfabb</a> before attempting to print is highly recommended.</p>
 			<div class="footer">
 				By <a href="http://twitter.com/suziam">@suziam</a> and <a href="http://twitter.com/makenai">@makenai</a> aka (by their powers combined) Amalgamation of Cats.
 				<img src="images/amalgamation.png" alt="An amalgamation of cats.">
@@ -35,6 +35,6 @@
 		<script src="js/Viewport.js"></script>
 		<script src="js/lib/FileSaver.js"></script>
 		<script src="js/Export.js"></script>
-		<script src="js/ZLathe.js"></script>
+		<script src="js/Lathe-R-Beam.js"></script>
 	</body>
 </html>
