Changed rest of references from ZLathe to Lathe-R-Beam

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>			
 			<h3>Instructions</h3>
 			<p>Click three or more times in the left window to create a profile shape. Try to make the first and last points as close to the dotted line as possible. When you're done, click 'Lathe' and see your creation turned into a 3D shape!</p>
-			<p>You can rotate the 3D shape by moving your mouse, or export to STL format for 3D printing. Running through <a href="http://cloud.netfabb.com/">netfabb</a> before attempting to print is highly recommended.</p>
+			<p>You can rotate the 3D shape by click and dragging your mouse over the right window, or export to STL format for 3D printing. Running through <a href="http://cloud.netfabb.com/">netfabb</a> before attempting to print is highly recommended.</p>
 			<div class="footer">
 				By <a href="http://twitter.com/suziam">@suziam</a> and <a href="http://twitter.com/makenai">@makenai</a> aka (by their powers combined) Amalgamation of Cats.
 				<img src="images/amalgamation.png" alt="An amalgamation of cats.">
