Added fork me link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div class="container">
 			<div class="header">
 				<h1 id="logo">Lathe-R-Beam</h1>
+				<a href="https://github.com/makenai/Lathe-R-Beam"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
 			</div>
 			<div id="canvasContainer">
 				<div id="windows"></div>
